--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/jpeg" href="/new-bw-logo.jpg" />
-
+		<meta property="og:image" content="https://www.bozzlesarkvets.co.uk/new-logo.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
